# BindCraft

./: bindcraft.py  pyproject.toml  run_bindcraft.py
functions/: colabdesign_utils.py
settings_advanced/: default_4stage_multimer.json
settings_target/: PDL1.json
src/bindcraft.egg-info/: PKG-INFO  SOURCES.txt
